syntax of OMS: RemovalKind

--- a/Standard/OMG_OntoIOp_current.tex
+++ b/Standard/OMG_OntoIOp_current.tex
@@ -4454,14 +4454,10 @@ Furthermore, OMS can be constructed using
 \item an \syntax{Approximation} of an OMS, in a subsignature (\syntax{InterfaceSignature}) or sublogic, with the effect that sentences not expressible in the subsignature respectively sublogic are replaced with a suitable approximation,
 \item a \syntax{Filtering} of an OMS, with the effect that some signature symbols and axioms (specified by a \syntax{BasicOMS}) are removed from the OMS,
 \item a module \syntax{Extraction} of an OMS, using a restriction signature (\syntax{InterfaceSignature}).
-%\item the application of a substitution to an OMS.
 \end{itemize}
-% derived from CASL (see CASL reference manual)
-% and HetCASL (see HetCASL summary)
-
-
-
-
+In all of these cases except for translation, a \syntax{RemovalKind}
+specifies whether the listed symbols are removed from the OMS, or
+whether they are kept (and the other ones are removed).
 
 
 
