Bernd's comments, part 1

--- a/Standard/OMG_OntoIOp_current.tex
+++ b/Standard/OMG_OntoIOp_current.tex
@@ -2946,7 +2946,7 @@ The following people contributed directly to the development of this specificati
 	\item Fabian Neuhaus, Otto-von-Guericke University Magdeburg, Germany  	  
 	\item Leo Obrst, MITRE, USA
         \item Tim Reddehase, University of Bremen, Germany
-        \item Madhura Thosar, Otto-von-Guericke University Magdeburg, Germany
+	\item Bernd Reichel, Otto-von-Guericke University Magdeburg, Germany  	        \item Madhura Thosar, Otto-von-Guericke University Magdeburg, Germany
    
 	\end{itemize}
 %	
@@ -4322,7 +4322,7 @@ by specifying its source and target OMS.
 %%%%%%%%%%%%%%%%%%%%%%%%%%
 \ssclause{Concrete Syntax}
 
-
+\vspace{-1.4em}
 \begin{lstlisting}[language=ebnf,escapeinside={()},morecomment={[l]{\%\%\ }}]
 
 NetworkDefinition ::= 'network' NetworkName '='
@@ -4729,7 +4729,7 @@ non-logical symbol is legal, this is a non-injective OMS mapping.})
 %%%%%%%%%%%%%%%%%%%%%%%%%%
 \ssclause{Concrete Syntax}\label{a:dol-text:mappings}
 
-
+\vspace{-2em}
 \index{alignment}
 \begin{lstlisting}[language=ebnf,mathescape]
 
@@ -5037,6 +5037,7 @@ within the \DOL library.
 %%%%%%%%%%%%%%%%%%%%%%%%%%
 \ssclause{Concrete Syntax}
 
+\vspace{-1.4em}
 \begin{lstlisting}[language=ebnf,escapeinside={()}]
 
 IRI           ::= '<' FullIRI '>' | CURIE
@@ -5667,7 +5668,7 @@ semantics. It is straightforward to see that the satisfaction condition holds.
 \qed\end{definition}
 
 
-\begin{definition}[Common Logic - \Clogic]\label{sem:CommonLogic}
+\begin{definition}[Common Logic --- \Clogic]\label{sem:CommonLogic}
 A common logic signature
 $\Sigma$ (called vocabulary in Common Logic terminology) consists of a
 set of names, with a subset called the set of discourse names, and a
@@ -5829,7 +5830,6 @@ syntax of the source logic into the target logic.
  Let $I = (\Sig^I,$ $ \Mod^I, \Sen^I, \models^I)$ and $J = (\Sig^J, \Mod^J,
 \Sen^J, \models^J)$ be two institutions. An \defsty{theoroidal institution comorphism} from $I$ to
 $J$ is a institution comorphism from $I$ to $J^{th}$.
-
 \qed\end{definition}
 
 \medskip
@@ -5950,7 +5950,7 @@ serializations.
  It is required that for each institution in the heterogeneous logical environment there is a trivial signature
 $\emptyset$ with model class $\cM_\emptyset$ and such that there exists a unique signature morphism
 from $\emptyset$ to any signature of the institution. Moreover, the existence of a partial union operation on logics is required; denoted $\bigcup$: 
-$L_1 \bigcup L_2 = (L, \rho_1:L1 \to L, \rho_2 : L_2 \to L)$, when defined. Finally, some of the comorphisms are marked as default translations and some of the morphisms as default projection, with the condition that between two institutions at most one comorphism 
+$L_1 \bigcup L_2 = (L, \rho_1:L_1 \to L, \rho_2 : L_2 \to L)$, when defined. Finally, some of the comorphisms are marked as default translations and some of the morphisms as default projection, with the condition that between two institutions at most one comorphism 
 and at most one morphism is marked as default.
 
 For each logic in the heterogeneous logical environment, it is further required that there is:
@@ -6002,12 +6002,12 @@ A functor between two inclusive categories is inclusive if it takes inclusions i
 
 Let $I$ be a weakly inclusive institution.  $I$  \emph{has differences}, if there is a binary operation $\setminus$ on signatures, 
 such that for each pair of signatures 
-$\Sigma_1, \Sigma_2$:
+$\Sigma_1, \Sigma_2$, the greatest signature $\Sigma$ such that
 \begin{enumerate}
-  \item $\Sigma_1\setminus \Sigma_2 \subseteq \Sigma_1$
-  \item $(\Sigma_1\setminus \Sigma_2) \cap \Sigma_2 = \emptyset$
-   \item for any $\Sigma$ with the properties 1.\ and 2.\ above, $\Sigma \subseteq \Sigma_1\setminus \Sigma_2$.
+  \item $\Sigma \subseteq \Sigma_1$
+  \item $\Sigma \cap \Sigma_2 = \emptyset$
 \end{enumerate} 
+exists and is equal to $\Sigma_1\setminus \Sigma_2$.
   
 
 
