moved paragraph about symbol maps to better place

--- a/Standard/OMG_OntoIOp_current.tex
+++ b/Standard/OMG_OntoIOp_current.tex
@@ -4639,6 +4639,13 @@ signature morphism. A proof obligation expressing that the source OMS,
 when translated along the signature morphism and/or the
 \syntax{OMSLanguageTranslation}, logically follows from the target OMS.
 
+A symbol map in an interpretation is \required to cover all
+non-logical symbols of the source OMS; the semantics specification in
+\cref{c:semantics} makes this assumption. ({Mapping a non-logical
+  symbol twice is an error. Mapping two source non-logical symbols to
+  the same target non-logical symbol is legal, this is a non-injective
+  OMS mapping.})
+
 \syntax{Refinement}s subsume interpretations (via
 \syntax{SimpleRefinement}s), but allow the specification of much more
 complex relation between OMS (and OMS networks).  The style differs
@@ -4718,10 +4725,6 @@ to the \syntax{InterfaceSignature}.
 \end{center}
 
 
-A symbol map in an interpretation is \required to cover all non-logical symbols of the source OMS; 
-the semantics specification in \cref{c:semantics} makes this assumption. ({Mapping a 
-non-logical symbol twice is an error. Mapping two source non-logical symbols to the same target 
-non-logical symbol is legal, this is a non-injective OMS mapping.})
 
 
 
