--- a/Standard/OMG_OntoIOp_current.tex
+++ b/Standard/OMG_OntoIOp_current.tex
@@ -4635,7 +4635,7 @@ when translated along the signature morphism and/or the
 complex relation between OMS (and OMS networks).  The style differs
 from interpretation in that even a single OMS is a refinement (via
 \syntax{RefinementOMS}); this corresponds to the source of an
-interpretation. Using \syntax{SimpleOMSRefinement}s, a refinment can
+interpretation. Using \syntax{SimpleOMSRefinement}s, a refinement can
 be further specialized to a (target) OMS via an
 \syntax{OMSRefinementMap}. The latter involves a symbol map and/or OMS
 language translation, analogously to interpretations.  With this style
@@ -4952,7 +4952,7 @@ Prefix mappings can be defined at the beginning of a \DOL library (specified in 
 these apply to all parts of the \DOL library, including basic OMS as clarified in \cref{c:map-ids}).  
 %Their syntax is:
 
-Bindings in a prefix map are evaluated from left to right.  Authors \shouldnot bind the same prefix twice, but if they do, the later binding wins.
+Bindings in a prefix map are evaluated from left to right.  Authors \shouldnot bind the same prefix twice, but if they do, the later binding takes precedence.
 
 \ssclause{Mapping identifiers in basic OMS to IRIs}\label{c:map-ids}
 
@@ -5365,7 +5365,7 @@ The lexical symbols of the \DOL text serialization include various key words and
 
 \sssclause{Key words}
 
-Key words are always written lowercase. The following key words are reserved, and are not available for use as variables or as CURIEs with no prefix\footnote{In such a case, one can still rename affected variables, or declare a prefix binding for affected CURIEs, or use absolute IRIs instead.  None of these rewritings changes the semantics.}, although they can be used as parts of tokens. 
+Key words are always written lowercase. The following key words are reserved, and are not available for use as variables or as CURIEs with no prefix\footnote{In such a case, one can still rename affected variables, or declare a prefix binding for affected CURIEs, or use absolute IRIs instead.  These rewritings do not change the semantics.}, although they can be used as parts of tokens. 
 \cbs
 %{\ttfamily %
 \begin{lstlisting}
