Bernd's comments, part 2

--- a/Standard/OMG_OntoIOp_current.tex
+++ b/Standard/OMG_OntoIOp_current.tex
@@ -6145,7 +6145,7 @@ the context of previous declarations, which is denoted
 $sem^{(\cI,\Sigma,\cM,\Delta)}_{(L,L',S)}(O)$.
 
 \ssclause{Semantics of Documents}
- In this section the semantics of \DOL constructs regarding docuemnts and \DOL libraries is defined. 
+ In this section the semantics of \DOL constructs regarding documents and \DOL libraries is defined. 
 
 \semdom{ sem(\syntax{Document}) = \Gamma}
 
@@ -6177,7 +6177,7 @@ mappings and OMS networks, starting with an optional prefix map and a qualificat
 For a \syntax{DOLLibrary} $dolLibrary$,
 $$sem(dolLibrary) = \Gamma'$$
 \noindent 
-where
+where\\
  $sem(dolLibrary.\syntax{prefixMap}) = PMap$,\\
  $\Gamma_1 = \Gamma_\emptyset.\{\prefix = PMap\}$,\\
   $sem(\Gamma_1, dolLibrary.\syntax{qualification}) = \Gamma_2$,\\
@@ -6297,11 +6297,11 @@ prefix in the colimit of a network for the symbols with the origin in that node 
                from $G$.
  \end{itemize}
  
- \item $removePaths(\Gamma, G, iri1, iri2)$, where $G$ is a graph, 
-      $\Gamma$ is a global environment and $iri1, iri2$ are \syntax{IRI}s,
+ \item $removePaths(\Gamma, G, iri_1, iri_2)$, where $G$ is a graph, 
+      $\Gamma$ is a global environment and $iri_1, iri_2$ are \syntax{IRI}s,
  whose result is that
  all paths of imports in $G$ between the nodes labeled with 
- $iri1$ and $iri2$ are removed from $G$.
+ $iri_1$ and $iri_2$ are removed from $G$.
 
 \end{itemize}
 
@@ -6378,11 +6378,11 @@ If $excludedElem$ is a $\syntax{ElementRef}$,
 $$sem(\Gamma, G, excludedElem) = removeElement(\Gamma, G, excludedElem.\syntax{iri})$$.
 
 If $excludedElem$ is a $\syntax{PathReference}$,
-$$sem(\Gamma, G, excludedElem) = removePaths(\Gamma, G, iri1, iri2)$$
+$$sem(\Gamma, G, excludedElem) = removePaths(\Gamma, G, iri_1, iri_2)$$
 \noindent 
 where
-$iri1 = excludedElem.\syntax{elementRef}.\syntax{iri}$ 
-and $iri2 = excludedElem.\syntax{elementRef2}.\syntax{iri})$.
+$iri_1 = excludedElem.\syntax{elementRef}.\syntax{iri}$ 
+and $iri_2 = excludedElem.\syntax{elementRef2}.\syntax{iri})$.
 
 \ssclause{Semantics of OMS}
 
@@ -6511,7 +6511,7 @@ if there is a signature morphism $\Sigma_1\to\Sigma_2$.
 The theory-level semantics for $O'$ cannot be defined.
 
 $Env(\Gamma, O')$ is obtained from $\Gamma$ by adding to $\Gamma.imports$ a new
-node labeled with $(Name(O'), \Inst(O'),\allowbreak \Sig(O'), \Mod(O'), \Th(O')))$ and
+node labeled with $(Name(O'), \Inst(O'),\allowbreak \Sig(O'), \Mod(O'), \Th(O'))$ and
 an edge from the node of $O$ to the node of $O'$ labeled with the identity
 morphism on $\Sig(O')$.
 
@@ -6621,7 +6621,7 @@ The semantics of an \syntax{ExtractionOMS} $O'$ is
         the inclusion of $\Sigma'$ in $\Sig(O'.\syntax{oms})$
 \end{itemize}
 where 
-$sem(\Gamma, (\Sig(O'.\syntax{oms}), \Th(O'.\syntax{oms})), O'.\syntax{extraction})) = 
+$sem(\Gamma, (\Sig(O'.\syntax{oms}), \Th(O'.\syntax{oms})), O'.\syntax{extraction}) = 
 (\Sigma',\Delta')$.
 %which in turn amounts to stating that each $\Sigma' \cup \Sigma$-reduct
 %of a $\Mod(\Sig(O))$-model can be expanded to a $\Mod(\Sig(O))$-model
